# shelly_plug_metrics_exporter

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  compose.yml  config.cc  config.h  config_test.cc  main.cc  parser.cc  parser.h  parser_test.cc  poller.cc  poller.h  poller_test.cc  registry.cc  registry.h  registry_test.cc  scraper.cc  scraper.h  scraper_test.cc  shelly.cc  shelly.h  target.h
docs/images/: example_network.graffle
status_macros/: CMakeLists.txt  README.md  source_location.h  status_builder.cc  status_builder.h  status_macros.h
